--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,8 @@
 
         let myUserId = null, myRef = null, remotePlayers = {}, isMultiplayerMode = false, isCoopMode = false, networkInterval = null;
         let colyseusClient = null, colyseusRoom = null;
+        // Substitua pela sua URL da Render após o deploy
+        const COLYSEUS_PROD_URL = "canaan-combat-zone.onrender.com";
         let lastActivityTime = Date.now(); // Monitoramento de inatividade
         let isThirdPerson = true, isAiming = false, isManualFiring = false, moveInput = { x: 0, y: 0 }, keyState = { w: false, a: false, s: false, d: false }, pitch = 0, yaw = 0, velocityY = 0, isGrounded = true, recoil = 0, gunRecoilZ = 0, lastShotTime = 0, lastStepTime = 0, minimapCanvas, minimapCtx;
 
@@ -1417,8 +1419,7 @@
 
         async function connectColyseus() {
             const protocol = window.location.protocol === "https:" ? "wss" : "ws";
-            // Para local: "localhost:2567", Para Render: "sua-url.onrender.com"
-            const host = window.location.hostname === "localhost" ? "localhost:2567" : window.location.host;
+            const host = window.location.hostname === "localhost" ? "localhost:2567" : COLYSEUS_PROD_URL;
 
             logSystem("Connecting to Colyseus...", "info");
             colyseusClient = new Colyseus.Client(`${protocol}://${host}`);
