chore: update Colyseus production URL to crazyy-n878.onrender.com

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
         let myUserId = null, myRef = null, remotePlayers = {}, isMultiplayerMode = false, isCoopMode = false, networkInterval = null;
         let colyseusClient = null, colyseusRoom = null;
         // Substitua pela sua URL da Render após o deploy
-        const COLYSEUS_PROD_URL = "canaan-combat-zone.onrender.com";
+        const COLYSEUS_PROD_URL = "crazyy-n878.onrender.com";
         let lastActivityTime = Date.now(); // Monitoramento de inatividade
         let isThirdPerson = true, isAiming = false, isManualFiring = false, moveInput = { x: 0, y: 0 }, keyState = { w: false, a: false, s: false, d: false }, pitch = 0, yaw = 0, velocityY = 0, isGrounded = true, recoil = 0, gunRecoilZ = 0, lastShotTime = 0, lastStepTime = 0, minimapCanvas, minimapCtx;
 
