--- a/index.html
+++ b/index.html
@@ -545,6 +545,26 @@
             filter: grayscale(1);
         }
 
+        @keyframes pulse-mp {
+            0% {
+                box-shadow: 0 0 0 0 rgba(0, 243, 255, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 10px rgba(0, 243, 255, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(0, 243, 255, 0);
+            }
+        }
+
+        .pulse-btn {
+            animation: pulse-mp 1.5s infinite;
+            background: rgba(0, 243, 255, 0.2) !important;
+            font-weight: 900 !important;
+        }
+
         .menu-footer {
             margin-top: 10px;
             /* Reduzido de 20px */
@@ -1107,6 +1127,7 @@
 
         let myUserId = null, myRef = null, remotePlayers = {}, isMultiplayerMode = false, isCoopMode = false, networkInterval = null;
         let colyseusClient = null, colyseusRoom = null;
+        let lobbyJoinTime = 0;
         // Substitua pela sua URL da Render após o deploy
         const COLYSEUS_PROD_URL = "crazyy-n878.onrender.com";
         let lastActivityTime = Date.now(); // Monitoramento de inatividade
@@ -1347,37 +1368,49 @@
         function mulberry32(a) { return function () { var t = a += 0x6D2B79F5; t = Math.imul(t ^ t >>> 15, t | 1); t ^= t + Math.imul(t ^ t >>> 7, t | 61); return ((t ^ t >>> 14) >>> 0) / 4294967296; } }
 
         function showLobby(mode) {
-            cleanupMultiplayer();
-            document.getElementById("start-view").style.display = "none";
-            document.getElementById("lobby-screen").style.display = "flex";
-            const title = document.getElementById("lobby-title"), btn = document.getElementById("start-mp-btn");
-            if (mode === 'coop') {
-                roomPath = 'rooms/coop'; isCoopMode = true;
-                title.innerText = "CO-OP PVE"; title.style.color = "#FF00FF"; btn.style.borderColor = "#FF00FF"; btn.style.color = "#FF00FF";
-                btn.onclick = () => {
-                    hideCrazyInviteButton();
-                    if (isMasterClient) {
-                        update(ref(db, `${roomPath}/state`), { startTrigger: serverTimestamp() });
-                    }
-                    resetGame('coop');
-                };
-            } else {
-                roomPath = 'rooms/pvp'; isCoopMode = false;
-                title.innerText = "ONLINE PVP"; title.style.color = "#00f3ff"; btn.style.borderColor = "#00f3ff"; btn.style.color = "#00f3ff";
-                btn.onclick = () => {
-                    hideCrazyInviteButton();
-                    if (isMasterClient) {
-                        update(ref(db, `${roomPath}/state`), { startTrigger: serverTimestamp() });
-                    }
-                    resetGame('multi');
-                };
+            try {
+                cleanupMultiplayer();
+                lobbyJoinTime = Date.now();
+                document.getElementById("start-view").style.display = "none";
+                document.getElementById("lobby-screen").style.display = "flex";
+                const title = document.getElementById("lobby-title"), btn = document.getElementById("start-mp-btn");
+                if (mode === 'coop') {
+                    roomPath = 'rooms/coop'; isCoopMode = true;
+                    title.innerText = "CO-OP PVE"; title.style.color = "#FF00FF"; btn.style.borderColor = "#FF00FF"; btn.style.color = "#FF00FF";
+                    btn.onclick = () => {
+                        hideCrazyInviteButton();
+                        if (isMasterClient) {
+                            update(ref(db, `${roomPath}/state`), { startTrigger: serverTimestamp() });
+                        }
+                        resetGame('coop');
+                    };
+                } else {
+                    roomPath = 'rooms/pvp'; isCoopMode = false;
+                    title.innerText = "ONLINE PVP"; title.style.color = "#00f3ff"; btn.style.borderColor = "#00f3ff"; btn.style.color = "#00f3ff";
+                    btn.onclick = () => {
+                        hideCrazyInviteButton();
+                        if (isMasterClient) {
+                            update(ref(db, `${roomPath}/state`), { startTrigger: serverTimestamp() });
+                        }
+                        resetGame('multi');
+                    };
+                }
+                btn.innerText = "START";
+                btn.disabled = true;
+                btn.classList.remove("pulse-btn");
+                btn.style.borderColor = ""; btn.style.color = "";
+
+                // CRAZYGAMES: Mostrar botão de convite nativo
+                showCrazyInviteButton(roomPath);
+
+                connectLobby();
+                connectColyseus();
+            } catch (e) {
+                console.error("Lobby error:", e);
+                alert("Erro ao entrar no Lobby: " + e.message);
+                document.getElementById("start-view").style.display = "block";
+                document.getElementById("lobby-screen").style.display = "none";
             }
-
-            // CRAZYGAMES: Mostrar botão de convite nativo
-            showCrazyInviteButton(roomPath);
-
-            connectLobby();
-            connectColyseus();
         }
 
         async function connectLobby() {
@@ -1403,12 +1436,20 @@
                     if (unsubLobbyPlayers) unsubLobbyPlayers();
                     unsubLobbyPlayers = onValue(ref(db, roomPath + '/players'), (snapshot) => renderLobbyList(snapshot.val()), (error) => logSystem("DB Error: " + error.message, "error"));
 
-                    // Listener para início remoto do jogo
+                    // Listener para início remoto do jogo (Manter botão atualizado)
                     const startRef = ref(db, `${roomPath}/state/startTrigger`);
                     onValue(startRef, (s) => {
-                        if (s.val() && !isPlaying) {
-                            console.log("Remote start triggered!");
-                            resetGame(isCoopMode ? 'coop' : 'multi');
+                        const val = s.val();
+                        if (val && !isPlaying) {
+                            console.log("Remote signal to start received.");
+                            const btn = document.getElementById("start-mp-btn");
+                            if (!isMasterClient) {
+                                btn.innerText = "ENTRAR NA PARTIDA";
+                                btn.classList.add("pulse-btn");
+                                btn.disabled = false;
+                                btn.style.borderColor = "#00FF41";
+                                btn.style.color = "#00FF41";
+                            }
                         }
                     });
 
@@ -1462,6 +1503,19 @@
             // Ordenar por joinTimestamp para garantir que o Host seja estável (o primeiro que entrou)
             const allIds = Object.keys(data).sort((a, b) => (data[a].joinTimestamp || 0) - (data[b].joinTimestamp || 0));
             isMasterClient = (allIds[0] === myUserId);
+            const btn = document.getElementById("start-mp-btn");
+            if (isMasterClient) {
+                if (btn.innerText !== "ENTRAR NA PARTIDA") btn.innerText = "INICIAR MISSÃO";
+                btn.disabled = false;
+            } else {
+                // Se não é master, o botão só habilita se o startTrigger já tiver ocorrido
+                // (O listener do startRef cuida disso acima)
+                if (btn.innerText !== "ENTRAR NA PARTIDA") {
+                    btn.innerText = "AGUARDANDO LÍDER...";
+                    btn.disabled = true;
+                }
+            }
+
             const now = Date.now(); let count = 0;
             allIds.forEach(key => {
                 const p = data[key];
@@ -2000,6 +2054,7 @@
         function cleanupMultiplayer() {
             if (myRef) remove(myRef).catch(() => { });
             if (networkInterval) clearInterval(networkInterval);
+            if (colyseusRoom) try { colyseusRoom.leave(); colyseusRoom = null; } catch (e) { }
 
             if (unsubLobbyPlayers) unsubLobbyPlayers();
             if (unsubGamePlayers) unsubGamePlayers();
